# assignment1-basics

./: pyproject.toml
bench/: bpe_pretok_naive.py  bpe_pretok_naive_rust.py  bpe_pretok_parallel.py  bpe_pretok_parallel_rust.py
cs336_basics/: bpe.py
rust/: Cargo.toml  README.md
rust/benches/: benchmark.rs
rust/src/: lib.rs
src/cs336_basics/: bpe.py
tests/: adapters.py
