[package]
name = "bpe-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bpe"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.14.0"
onig = "6.5.1"
pyo3 = { version = "0.25.1", features = ["abi3-py310"] }
regex = "1.11.1"
